--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,10 @@
         "128": "icon.png"
       }
     },
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": false
+    },
     "icons": {
       "16": "icon.png",
       "48": "icon.png",
