--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chrome": "^0.0.260",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "chrome-types": "^0.1.263",
     "esbuild": "^0.20.0",
     "esbuild-plugin-copy": "^2.1.1",
     "esbuild-sass-plugin": "^3.0.0",
