--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
     "@types/react-dom": "^18.2.19",
     "esbuild": "^0.20.0",
     "esbuild-plugin-copy": "^2.1.1",
-    "esbuild-sass-plugin": "^3.0.0",
-    "postcss": "^8.4.35",
-    "postcss-preset-mantine": "^1.13.0",
-    "postcss-simple-vars": "^7.0.1"
+    "esbuild-sass-plugin": "^3.0.0"
   },
   "dependencies": {
     "@mantine/core": "^7.5.2",
