--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
     "description": "Select a word and match with CSV data",
     "permissions": [
         "activeTab",
-        "storage"
+        "storage",
+        "https://assets.publishing.service.gov.uk/*"
     ],
     "browser_action": {
         "default_popup": "popup/popup.html",
