--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dist": "rm -rf dist; node esbuild.js",
-    "lint": "eslint --fix src/",
+    "lint": "eslint src/",
+    "lint-fix": "eslint --fix src/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
